--- a/style/style.css
+++ b/style/style.css
@@ -38,12 +38,25 @@
     }
     .title{
         width: 100%;
+        height: auto;
     }
     .img{
         align-items: center;
     }
     .p{
         text-align: center;
+    }
+
+    .our-impact{
+        display: grid;
+        grid-template-columns: repeat(1 , 1fr);
+        row-gap: 10px;
+    }
+
+    .form{
+        width: 100%;
+        height: 100%;
+        margin: 0 0;
     }
 }
 
